# midi-player-stdout

./: Cargo.toml
src/: main.rs
